2012-05-17  Albert Chu <chu11@llnl.gov>

	* common/toolcommon/: Consolidate hostrange and sdr common options
	into the main common_cmd_args struct.

	* Globally update tools for changes.
	
2012-05-16  Albert Chu <chu11@llnl.gov>

	* common/toolcommon/tool-common-sensor.h,
	common/toolcommon/tool-sensor-common.c (list_sensor_types): Redo
	to not take pstate parameter.

	* ipmi-sensors/, ipmi-sel/: Code cleanup with use of
	list_sensor_type.  Call before launching threads in tools since it
	is identical in all outputs.

	* ipmi-sensors/ipmi-sensors.c (_ipmi_sensors): Fix bug in which
	multiple workaround flags and workaround flags with bridging could
	not be specified.
	
2012-05-16  Albert Chu <chu11@llnl.gov>

	* ipmi-oem/ipmi-oem.c (main), bmc-device/bmc-device.c (main): Turn
	on quiet caching if doing communication to multiple hosts.

2012-05-16  Albert Chu <chu11@llnl.gov>

	* common/toolcommon/tool-sdr-cache-common.h,
	common/toolcommon/tool-sdr-cache-common.c (sdr_cache_flush_cache):
	Do not require ipmi_sdr_ctx_t parameter, create it inside
	function.

	* Globally in tools, call sdr_cache_flush_cache() before opening
	ipmi_open.

	* Globally cleanup usage of exit codes using EXIT_FAILURE and
	EXIT_SUCCESS appropriately.  Globally in tools cleanup general
	exit code.

2012-05-15  Albert Chu <chu11@llnl.gov>

	* ipmi-pet/: Fix bugs associated with new library checks for sdr
	open for reading.
	
2012-05-15  Albert Chu <chu11@llnl.gov>

	Merge branch toolcleanup

	* common/toolsdr/tool-sdr-cache-common.h,
	common/toolsdr/tool-sdr-cache-common.c: Take struct sdr_cmd_args
	pointer as argument instead of each desired parameter.

	* common/toolcommon/tool-common.h,
	common/toolcommon/tool-common.c (ipmi_open): Take pstdout_state_t
	parameter and output errors instead of returning error string in
	buffer.

	* common/toolhostrange/tool-hostrange-common.h,
	common/toolhostrange/tool-hostrange-common.c (pstdout_setup): Take